--- a/labs/lab2.rmd
+++ b/labs/lab2.rmd
@@ -5,10 +5,22 @@ date: "21/03/2020"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
+```{r, warning=FALSE, message=FALSE}
+# Load Libraries
+library(dplyr)
+library(readr)
+library(randomForest)
+library(rfUtilities)
+library(rsample)
+library(ggplot2)
+library(caret)
+library(e1071)
+```
 ## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
