--- a/static/labs/week1.Rmd
+++ b/static/labs/week1.Rmd
@@ -48,166 +48,117 @@ The R language is widely used for data science and stats to do data exploration,
 
 R is free to use and the number of users are growing fast (well, it's free and bubbly community!) with lots of helpful packages at `CRAN` = `Comprehensive R Archive Network`.
 
-
 [`CRAN`](https://cran.r-project.org/) is a network of ftp and web servers around the world that store identical, up-to-date, versions of code and documentation for R.
 
+## RStudio and RStudio Cloud
 
 
-## What is RStudio?
-[From Julie Lowndes](http://jules32.github.io/resources/RStudio_intro/):  
-<blockquote>
-<b>If R were an airplane, RStudio would be the airport</b>, providing many, many supporting services that make it easier for you, the pilot, to take off and go to awesome places. Sure, you can fly an airplane without an airport, but having those runways and supporting infrastructure is a game-changer.
-</blockquote>
-The RStudio integrated development environment (IDE) has multiple components including:
-1. Source editor (to edit your scripts): 
-  - Docking station for multiple files, 
-  - Useful shortcuts ("Knit"), 
-  - Highlighting/Tab-completion, 
-  - Code-checking (R, HTML, JS), 
+## RStudio environment
+
+`RStudio` comes as a desktop application (*IDE* = Integrated development environment) and `RStudio Cloud` (which we are using in this unit).
+
+You do not need to install `RStudio Cloud`, you just create your account there when you go to https://rstudio.cloud/
+
+Optional: you can install a desktop version of RStudio from [here](https://rstudio.com/products/rstudio/download/#download). Make sure that you install R first from [here](https://cran.rstudio.com/) and then RStudio. This will allow you to run a copy of RStudio on your local computer.
+
+![RStudio Cloud interface.](../img/rstudio.png)
+
+The RStudio interface has the following components including:
+1. `Source editor` window` where you write and edit your files: 
+  - Docking station for multiple files - each file is  tab
+  - Useful shortcuts, such as `Run` for R code or `Knit` for RMarkdown documents  
+  - Code-checking: give you "suggestions" as you write (e.g. hints about syntax of functions)
   - Debugging features  
-2. Console window (to run your scripts, to test small pieces of code): 
-  - Highlighting/Tab-completion, 
-  - Search recent commands
-3. Other tabs/panes: 
-  - Graphics, 
-  - R documentation, 
-  - Environment pane, 
-  - File system navigation/access, 
-  - Tools for package development, git, etc
-There's a cheatsheet in the "Help" menu, on tips for using this interface.
-## RStudio Projects
-- Project directories keep your work organized since you will keep your data, your code, your results all located in one place. 
-- For the unit ETC3250, I have created a project on my laptop called `ETC3250`. Note that the name of the current project can be seen at the top right of the RStudio window.
-- YOU SHOULD ALWAYS WORK IN A PROJECT FOR THIS CLASS `r emo::ji("smile")`
-![Using projects to organise your work](projectname.png)
-- **Each time you start RStudio] for this class, be sure to open the right project.**
-## Exercise 1
-Create a project for this unit, in the directory.
-* File -> New Project -> Existing Directory -> Empty Project
-## Exercise 2
-Download the `lab1.Rmd` from the course web site. 
-## What is RMarkdown?
-- R Markdown is an authoring format that enables easy creation of dynamic documents, presentations, and reports from R. 
-- It combines the core syntax of __markdown__ (an easy-to-write plain text format) __with embedded R code chunks__ that are run so their output can be included in the final document. 
-- R Markdown documents are fully reproducible (they can be automatically regenerated whenever underlying R code or data changes).
-**There's a cheatsheet in the "Help" pages of RStudio on Rmarkdown.** 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. 
-Equations can be included using LaTeX (<https://latex-project.org/>) commands like this:
-```
-$$s^2 = \frac{1}{n-1}\sum_{i=1}^n (x_i-\bar{x})^2.$$
-```  
-produce
-$$s^2 = \frac{1}{n-1}\sum_{i=1}^n (x_i-\bar{x})^2.$$
-We can also use inline mathematical symbols such as `$\alpha$` and `$\infty$`, which produce $\alpha$ and $\infty$, respectively.
-For more details on using R Markdown see <http://rmarkdown.rstudio.com>. Spend a few minutes looking over that website before continuing with this document.
-## Exercise 3
-Look at the text in the `lab1.Rmd` document. 
-- What is R code? 
-- How does `knitr` know that this is code to be run?
-- Using the RStudio IDE, work out how to run a chunk of code. Run this chunk, and then run the next chunk.
-- Using the RStudio IDE, how do you run just one line of R code?
-- Using the RStudio IDE, how do you highlight and run multiple lines of code?
-- What happens if you try to run a line that starts with "```{r}"? Or try to run a line of regular text from the document?
-- Using the RStudio IDE, `knit` the document into a Word document.
-## Some R Basics
-* Type (into the console pane) and figure out what each of the following command is doing:
-```
-(100+2)/3
-5*10^2
-1/0
-0/0
-(0i-9)^(1/2)
-sqrt(2*max(-10,0.2,4.5))+100
-x <- sqrt(2*max(-10,0.2,4.5))+100
-x
-log(100)
-log(100,base=10)
-```
-* Check that these are equivalent: `y <- 100`, `y = 100` and `100 -> y`
-* R has rich support for documentation. Find the help page for the `mean` command, either from the help menu, or by typing one of these: `help(mean)` and `?mean`. Most help pages have examples at the bottom.
-* The `summary` command can be applied to almost anything to get a summary of the object. Try `summary(c(1, 3, 3, 4, 8, 8, 6, 7))`
-## Data Types
-* `list`'s are heterogeneous (elements can have different types)
-* `data.frame`'s are heterogeneous but elements have same length (`dim` reports the dimensions and `colnames` shows the column names)
-* `vector`'s and `matrix`'s are homogeneous (elements have the same type), which would be why `c(1, "2")` ends up being a character string.
-* `function`'s can be written to save repeating code again and again    
-* Try to understand these commands: `class`, `typeof`, `is.numeric`, `is.vector` and `length` 
-* See Hadley Wickham's online chapters on [data structures (http://adv-r.had.co.nz/Data-structures.html)](http://adv-r.had.co.nz/Data-structures.html) for more
-## Operations
-* Use built-in _vectorized_ functions to avoid loops
-```{r}
-set.seed(1000)
-x <- rnorm(6)
-x
-sum(x + 10)
-```
+  
+2. `Console` window where you can run your code directly as well as it shows execution of your scripts 
+  - Highlighting/Tab-completion, e.g. Red spot shows you when  your code is executed
+  - "History"= Recent commands
 
-##
+3. Other tabs/windows: 
+  - Files: to access your files and navigate folders
+  - Plots: to show your graphics and data viz
+  - Help: very useful as you will get all the R knowledge there and R documentation
+  - Other tools, such as package development, git, etc
+  
+There's a [cheatsheet](https://rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf) in the "Help" menu, on tips for using this interface.
 
-* Use `[` to extract elements of a vector.
+#### Task:
+- Set up your free RStudio Cloud account and create your workspace "BCO6007"
 
-```{r}
-x[1]
-x[c(T, F, T, T, F, F)]
+`Workspace` is your current R working environment. It includes all your objects, such as data and files. Once you finish your work, it saves a copy of the current workspace and reloads the next time R is started.
+
+## Projects
+
+Your workspace may have 1+ **projects**
+
+`Project` are  folders where you keep your work organized: it has your data, your code, your results all located in one place. 
+
+#### Task:
+
+- Create a ptoject called `BCO6007` and locate your files under the `Files` tab. 
+Make sure that you always work in the correct project for this class,
+`r emo::ji("smile")`
+
+
+## R Script and RMarkdown documents
+
+we will work with two types of documents in this unit:
+- R script: R code to do data analysis
+- RMarkDown document: which is a document that combines R script and normal text. In the rmarkdown document you can present your data analysis (R code) and talk about data and results of analysis as well as show dataviz.
+
+#### Task:
+
+- Create an empty R script: 
+* File -> New file -> R script 
+- Save the file as `practice1.R`
+
+- Upload a rmarkdown document to your project `week1.Rmd`
+You need to download the file from VUCollaborate to your local computer and then upload it.
+- Open the file in RStudio Cloud.
+
+Notice the difference in extension `.R` vs `.Rmd`
+
+You can read more about RMarkdown [here](https://rmarkdown.rstudio.com/lesson-1.html). 
+We will also have a dedicated tutorial for it.
+
+**To run an .R script you need to press `Run` or `Ctrl+Enter` (on Mac `Command+Return`) the line with your cursor.
+
+To run your RMarkdown document you need to press `Knit` from the top panel.
+
+Run `week1.Rmd` by pressing Knit and compare the page that is generated (Web page) with the code in your RStudio Cloud.
+
+#### Tasks 
+Work out how to run 
+- a chunk of code in Rstudio
+- one line of R code?
+- Loate the line that starts with "```{r}."
+What happens when you `Run` it
+
+### Some R Basics
+Switch to your `practice1.R` and 
+
+* Type and run the following commands:
+
+```
+150/3
+a<-5*10^2
+b<-"Cool"
 ```
 
-##
+Notice what is `<-` 
+It assigns value to variables that appear in `Environment`
 
-* Extract _named_ elements with `$`, `[[`, and/or `[`
+* R has good help support for documentation. Find the help page for the `mean` command, either from the help menu, or by typing one of these: `help(mean)` and `?mean`. Most help pages have examples at the bottom.
 
-```{r}
-x <- list(
-  a = 10,
-  b = c(1, "2")
-)
-x$a
-x[["a"]]
-x["a"]
-```
+* The `summary` command can be applied to almost anything to get a summary of the object. Try `summary(c(3,4, 6, 4))`
 
-## Examining 'structure'
+What do you think is `c(x, y, z)` - ti is a **vector* with data.
 
-* `str()` is a very useful `R` function. It shows you the "structure" of (almost) _any_ R object (and _everything_ in R is an object!!!)
+But this is to "booooring", let's move on to more exciting things~
 
-```{r}
-str(x)
-```
 
-## Missing Values
+## Working with packages (=libraries) 
 
-* `NA` is the indicator of a missing value in R
-* Most functions have options for handling missings
-
-```{r}
-x <- c(50, 12, NA, 20)
-mean(x)
-mean(x, na.rm=TRUE)
-```
-
-## Counting Categories
-
-* the `table` function can be used to tabulate numbers
-
-```{r}
-table(c(1, 2, 3, 1, 2, 8, 1, 4, 2))
-```
-
-## Functions
-
-One of the powerful aspects of R is to build on the reproducibility. If you are going to do the same analysis over and over again, compile these operations into a function that you can then apply to different data sets. 
-
-```{r}
-average <- function(x)
-{
-  return(sum(x)/length(x))
-}
-y1 <- c(1,2,3,4,5,6)
-average(y1)
-y2 <- c(1, 9, 4, 4, 0, 1, 15)
-average(y2)
-```
-
-Now write a function to compute the mode of some vector, and confirm that it returns `4` when applied on `y <- c(1, 1, 2, 4, 4, 4, 9, 4, 4, 8)`
 
 ## Exercise 4
 
